--- a/lab5/lab5.html
+++ b/lab5/lab5.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Employee Search</title>
+      
+    <link rel="manifest" href="manifest.json">
 
   </head>
   <body>
